Fix block spacing and add yellow color option.

--- a/web/themes/custom/themekit/sass/components/_blocks.scss
+++ b/web/themes/custom/themekit/sass/components/_blocks.scss
@@ -28,7 +28,6 @@
 // Blog Post Listings
 .block-views-blockblog-post-listings-block-1,
 .block-views-blockblog-post-listings-block-2 {
-  padding: $medium-large-margin $medium-margin;
   background-color: $white;
   position: relative;
   &:before {
@@ -40,9 +39,6 @@
     height: 100%;
     background-color: $white;
     z-index: -1;
-  }
-  @include breakpoint(medium) {
-    padding: $medium-large-margin $large-margin;
   }
   > h2 {
     margin-bottom: 35px;
@@ -72,10 +68,8 @@
 // Promo Block
 .promo_block {
   margin-bottom: 45px;
-  padding: 25px 40px;
   border: 1px solid $dark-gray;
   .field--name-field-heading {
-    margin-bottom: 25px;
     font-size: rem-calc(32px);
     line-height: rem-calc(40px);
     color: $font-gray;
