--- a/web/themes/custom/themekit/sass/paragraphs/_simple.scss
+++ b/web/themes/custom/themekit/sass/paragraphs/_simple.scss
@@ -70,6 +70,12 @@
     font-size: rem-calc(20);
   }
 
+  .field--name-field-text-area {
+    :last-child {
+      margin-bottom: 0;
+    }
+  }
+
   .field--name-field-svg {
     max-width: 110px;
     @include left-right(margin, auto);
@@ -112,7 +118,7 @@
       height: 50px;
       position: absolute;
       bottom: 35px;
-      left: px-to-percent(75px, 600px);
+      left: 6.25%;
       background: url("../images/scroll-indicator-copy.png") 0 100% no-repeat;
     }
   }
@@ -134,6 +140,18 @@
       .field__item:last-child & {
         left: 0;
       }
+    }
+  }
+
+  &.color-scheme--yellow {
+    color: #fff;
+
+    &:after {
+      background: $light-orange;
+    }
+
+    .heading {
+      color: #fff;
     }
   }
 
